# honeypot-project

./: .gitignore  README.md  cowrie-parsed.txt  cowrie.cfg  docker-compose.yml
backend/: .gitignore  alembic.ini  cowrie-parsed.txt  cowrie-raw.json  cowrie.json  evaluate_lstm.py  evaluate_lstm_cm.py  evaluate_rf_cm.py  events.db  honeypot_multi_model.pkl  honeypot_rf_model.pkl  ml_baseline.py  pyproject.toml  start.py
backend/app/: honeypot_rf_v2.pkl  lstm_metadata.json  main.py  model_metadata.json
backend/app/decoys/: aws_keys.txt  db_backup.sql  payroll_2026.xlsx  prod_server_passwords.txt
backend/app/models/: event.py
backend/app/models_dl/: dl_metadata.json
backend/app/routers/: events.py
backend/app/templates/: dashboard.html  login.html
backend/archive/code_backups/: main.py.bak_network_logic  main.py.before_fuse_fix  main.py.before_network_fix  main.py.before_network_logic_fix  main.py.old  main.pyes
backend/archive/old_models/: lstm_metadata_v10.json
backend/final_proof/: lstm_results.txt  lstm_results_old.txt  rf_results.txt  rf_summary_metrics.json
backend/final_proof/demo_payloads/: benign.json  bot.json  ddos.json  ddos_repeat_1.json  ddos_repeat_2.json  ddos_repeat_3.json  dos_goldeneye.json  dos_hulk.json  dos_hulk_repeat_1.json  dos_hulk_repeat_2.json  (+11 more)
backend/final_proof_cicids_dl/: backend_model_files.txt  classification_report.txt  dl_metadata.json  training_history.json
backend/models/: honeypot_enhanced_model.pkl
backend/notebooks/: features.ipynb
backend/scripts/: generate_ssh_traffic.py  make_demo_payloads.py  plot_imbalance_from_results.py
(+12 files in other folders)
