[project]
name = "honeypot-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Surya",email = "prakash001surya@gmail.com"}
]
requires-python = "^3.10"
dependencies = [
    "fastapi (==0.115.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "pydantic (==2.9.2)",
    "sqlalchemy (==2.0.35)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
