[project]
name = "honeypot-backend"
version = "0.6.0"
description = "Honeypot Phase 5 - ML Baseline (XGBoost + FastAPI)"
authors = [
    {name = "Surya", email = "prakash001surya@gmail.com"}
]
requires-python = "^3.10"  # ✅ Compatible with your Python 3.10.12
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]>=0.41.0,<0.42.0",
    "pydantic==2.9.2",
    "sqlalchemy==2.0.35",
    "aiosqlite>=0.22.1,<0.23.0",
    "jinja2>=3.1.6,<4.0.0",
    "python-multipart>=0.0.22,<0.0.23",
    
    # PHASE 5 ML (Python 3.10 compatible versions)
    "numpy (>=2.0.0)",
    "pandas>=2.0.0,<3.0.0", 
    "scikit-learn>=1.4.0,<1.8.0",
    "xgboost>=2.0.0,<3.0.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0,<3.10.0",
    "seaborn>=0.12.0,<0.13.0",
    "joblib>=1.3.0",
    "geoip2 (>=5.2.0,<6.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pyarrow (>=23.0.1,<24.0.0)",
    "tensorflow (>=2.21.0,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "alembic==1.16.2"
]
